--- a/Fundamentos do Desenvolvimento Web/Bloco 3/1/index.html
+++ b/Fundamentos do Desenvolvimento Web/Bloco 3/1/index.html
@@ -9,25 +9,20 @@
 <body>
   <h1>Exercícios</h1>
   <ul>
-    <p>
-      <li>Ainda</li>
-    </p>
-    <p>
-      <li>Não</li>
-    </p>
-    <p>
-      <li>Fiz</li>
-    </p>
-    <p>
-      <li>Amizade</li>
-    </p>
-    <p>
-      <li>Com</li>
-    </p>
-    <p>
-      <li>Ninguém</li>
-    </p>
+    <li><a href="#a">Ainda</li></a>
+    <li><a href="#n">Não</li></a>
+    <li><a href="#f">Fiz</li></a>
+    <li><a href="#am">Amizade</li></a>
+    <li><a href="#c">Com</li></a>
+    <li><a href="#ni">Ninguém</li></a>
   </ul>
+  <p id="a">Ainda</p>
+  <p id="n">Não</p>
+  <p id="f">Fiz</p>
+  <p id="am">Amizade</p>
+  <p id="c">Com</p>
+  <p id="ni">Ninguém</p>
+  <a href="https://google.com">Google</a>
   <ul><img src="https://vidadeprogramador.com.br/uploads/2021/11/tirinha2154.png" width="800px"
       alt="Tirinha, onde o desenho representa duas pessoas sentadas em sentido oposto uma à outra, de máscara, observando seus monitores e conversando">
   </ul>
