segundo exercício de CSS

--- a/Fundamentos do Desenvolvimento Web/Bloco 3/2/index.html
+++ b/Fundamentos do Desenvolvimento Web/Bloco 3/2/index.html
@@ -11,9 +11,9 @@
     <h1>Exercícios 3.2</h1>
     <p class="p-style">Qual é a sua cor favorita?</p>
     <ul class="ul-style">
-        <li>Amarelo</li>
-        <li>Vermelho</li>
-        <li>Marrom</li>
+        <li id="yllw">Amarelo</li>
+        <li id="rd">Vermelho</li>
+        <li id="brwn">Marrom</li>
     </ul>
 </body>
 
