--- a/Fundamentos do Desenvolvimento Web/Bloco 3/3/index4.html
+++ b/Fundamentos do Desenvolvimento Web/Bloco 3/3/index4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pseudoclasses</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style4.css">
 </head>
 
 <body>
