criação e modificação dos arquivos index.html, index2.html; criação dos arquivos index3.html e style.css; deleção do arquivo test.txt

--- a/Fundamentos do Desenvolvimento Web/Bloco 3/2/index.html
+++ b/Fundamentos do Desenvolvimento Web/Bloco 3/2/index.html
@@ -2,19 +2,32 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <title>HTML</title>
-    <link rel="stylesheet" href="index.css">
+  <meta charset="UTF-8">
+  <title>HTML</title>
+  <style>
+    h1 {
+      font-size: 65px;
+      color: orange
+    }
+
+    ul {
+      background-color: purple;
+    }
+
+    .same-color {
+      background-color: seagreen;
+    }
+  </style>
 </head>
 
 <body>
-    <h1>Exercícios 3.2</h1>
-    <p class="p-style">Qual é a sua cor favorita?</p>
-    <ul class="ul-style">
-        <li id="yllw">Amarelo</li>
-        <li id="rd">Vermelho</li>
-        <li id="brwn">Marrom</li>
-    </ul>
+  <h1>Exercícios 3.2</h1>
+  <p class="same-color">Qual é a sua cor favorita?</p>
+  <ul class="same-color">
+    <li>Amarelo</li>
+    <li>Vermelho</li>
+    <li>Marrom</li>
+  </ul>
 </body>
 
 </html>
