modificação dos arquivos index.html e style.css; remoção dos arquivos index2.css e index3.css

--- a/Fundamentos do Desenvolvimento Web/Bloco 3/2/index.html
+++ b/Fundamentos do Desenvolvimento Web/Bloco 3/2/index.html
@@ -4,20 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML</title>
-  <style>
-    h1 {
-      font-size: 65px;
-      color: orange
-    }
-
-    ul {
-      background-color: purple;
-    }
-
-    .same-color {
-      background-color: seagreen;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
