--- a/Fundamentos do Desenvolvimento Web/Bloco 3/3/index4.html
+++ b/Fundamentos do Desenvolvimento Web/Bloco 3/3/index4.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-  <h1><em>Combinações e Classes Descendentes</em></h1>
+  <h1 class="header"><em>Combinações e Classes Descendentes</em></h1>
   <br />
-  <h3>Top 5 frases memoráveis:</h3>
+  <h3 class="header">Top 5 frases memoráveis:</h3>
   <ol>
     <li><em>Com grandes poderes vêm grandes responsabilidades.</em> - Tio Ben (Homem Aranha)</li>
     <li><em>Houston, temos um problema.</em> - Jack Swigert</li>
@@ -18,30 +18,30 @@
     <li><em>Parte da jornada é o fim.</em> - Tony Stark (Homem de Ferro)</li>
     <li><em>Às vezes, o melhor que podemos fazer é começar novamente.</em> - Steve Rogers (Capitão América)</li>
   </ol>
-  <h3>As maiores linguagens de programação:</h3>
+  <h3 class="header">As maiores linguagens de programação:</h3>
   <ul>
-    <li>Python</li>
-    <li>Java</li>
-    <li>JavaScript</li>
+    <li class="languages">Python</li>
+    <li class="languages java">Java</li>
+    <li class="languages java">JavaScript</li>
     <li>C#</li>
     <li>C / C++</li>
   </ul>
-  <h3>Maiores aliados de uma pessoa desenvolvedora:</h3>
+  <h3 class="header">Maiores aliados de uma pessoa desenvolvedora:</h3>
   <ul>
     <li>
-      <a href="https://pt.stackoverflow.com/" target="_blank">StackOverflow</a>
+      <a href="https://pt.stackoverflow.com/" target="_blank" id="stack">StackOverflow</a>
     </li>
     <li>
-      <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>
+      <a href="https://www.w3schools.com/" target="_blank" id="w3">W3Schools</a>
     </li>
     <li>
-      <a href="https://developer.mozilla.org/pt-BR/" target="_blank">MDN Web Docs</a>
+      <a href="https://developer.mozilla.org/pt-BR/" target="_blank" id="mdn">MDN Web Docs</a>
     </li>
     <li>
-      <a href="https://devdocs.io/" target="_blank">DevDocs</a>
+      <a href="https://devdocs.io/" target="_blank" id="devdocs">DevDocs</a>
     </li>
     <li>
-      <a href="https://app.betrybe.com/" target="_blank">Trybe</a>
+      <a href="https://app.betrybe.com/" target="_blank" id="trybe">Trybe</a>
     </li>
   </ul>
 </body>
