adiciona arquivos exercicios.html, .css e .js

--- a/Fundamentos do Desenvolvimento Web/Bloco 5/1/administrador_de_tempo.html
+++ b/Fundamentos do Desenvolvimento Web/Bloco 5/1/administrador_de_tempo.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
   <title>Administrador do Tempo</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body id="container">
@@ -22,7 +22,7 @@
     </div>
   </section>
 
-  <section class="no-emergency-tasks">
+  <section class="non-emergency-tasks">
     <div>
       <h3>Não-Urgente e Importante</h3>
     </div>
@@ -34,7 +34,7 @@
   <footer id="footer-container">
     <div>&copy; Trybe</div>
   </footer>
-  <script src="script.js"></script>
+  <script src="administradorDeTempo.js"></script>
 </body>
 
 </html>
