resolução dos exercícios

--- a/Fundamentos do Desenvolvimento Web/Bloco 5/1/exercicios.html
+++ b/Fundamentos do Desenvolvimento Web/Bloco 5/1/exercicios.html
@@ -19,7 +19,7 @@
       <p>Trybe</p>
     </section>
   </main>
-  <script src="exercicios.js"></script>
+  <script src="exercicios.js">
   </script>
 </body>
 
